# codora

./: Cargo.toml  README.md  justfile
crates/codora/: Cargo.toml  README.md
crates/codora-adapter/: Cargo.toml
crates/codora-adapter/src/: axum.rs  lib.rs
crates/codora-bot/: Cargo.toml
crates/codora-bot/src/: lib.rs
crates/codora-identity/: Cargo.toml
crates/codora-identity/src/: lib.rs
crates/codora-notification/: Cargo.toml
crates/codora-orm/: Cargo.toml
crates/codora-proc-macro/: Cargo.toml
crates/codora-security/: Cargo.toml
crates/codora-security/examples/: codora-security.rs
crates/codora-security/src/: authentication.rs  lib.rs
crates/codora-security/src/authentication/: cookie.rs  handler.rs
crates/codora-security/src/authentication/cookie/: cookies.rs
crates/codora-web/: Cargo.toml
crates/codora-worker/: Cargo.toml
crates/codora-ws/: Cargo.toml
crates/codora/examples/: codora.rs
crates/codora/src/: conf.rs  lib.rs
docs/app/: page.tsx
docs/app/mdx-page/: page.mdx
