[package]
name = "codora-bot"
keywords = ["bot", "tlib", "telegram-library", "discord-library"]
categories = ["web-programming"]
edition = { workspace = true }


[lints]
workspace = true


[dependencies]
derive-new = "0.7.0"
hyper = { version = "1.7.0", features = ["full"] }
thiserror = { workspace = true }
tracing = { workspace = true }
codora = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tower = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
